<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/lyt_no_connection"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".errors.error404">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:src="@drawable/nonet"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="12sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_404_erro"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_net"
        android:textSize="20sp"
        android:layout_margin="5sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retry"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
    />

    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"/>

</LinearLayout>