<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/feed_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:contentDescription="@string/authDesc"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/overlay_dark_40"/>



        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/corn"
                android:tint="@color/colorPrimary" />

            <View
                android:layout_width="0dp"
                android:layout_height="35dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:id="@+id/fname"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/account"
                android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey_300"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:id="@+id/email"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/at"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/blue_grey_300" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="20dp" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/blue_grey_300" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password2"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                app:endIconMode="password_toggle"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/blue_grey_300" />
            </com.google.android.material.textfield.TextInputLayout>



            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/button_rounded_green_300"
                android:text="@string/signup"
                android:onClick="CreateUserAccount"
                android:textAllCaps="false"
                android:textColor="@color/grey_3" />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/blue_grey_300" />

                <TextView
                    android:id="@+id/sign_upText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/login"
                    android:onClick="loginAction"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</LinearLayout>