<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="400sp"
    android:layout_height="650sp"
    android:layout_gravity="center"
    android:padding="5sp">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="back"
        android:src="@drawable/close_box_outline" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35sp"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            app:cardCornerRadius="2sp"
            app:cardElevation="2sp">


            <View
                android:layout_width="0sp"
                android:layout_height="5sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15sp"
                android:paddingLeft="15sp"
                android:paddingRight="15sp">


                <TextView
                    android:id="@+id/newsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:gravity="center_vertical"
                    android:textSize="30sp"
                    android:text="@string/govt_news"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="5sp"
                    android:layout_height="0sp"/>


                <ImageView
                    android:id="@+id/fertilizer_image"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:src="@drawable/maize"
                    android:contentDescription="@string/authDesc"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>

                <View
                    android:layout_width="0sp"
                    android:layout_height="5sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <View
                        android:layout_width="0sp"
                        android:layout_height="10sp"/>


                </LinearLayout>


                <View
                    android:layout_width="10sp"
                    android:layout_height="0sp"/>



                <TextView
                    android:id="@+id/paragraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="0sp"
                    android:layout_height="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="35sp"
                    android:text="@string/more"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/grey_40"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"/>

                <View
                    android:layout_width="0sp"
                    android:layout_height="20sp"/>
                <TextView
                    android:id="@+id/paragraph2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/govt_body"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80" />

                <View
                    android:layout_width="0sp"
                    android:layout_height="5sp"/>





                <TextView
                    android:id="@+id/paragraph4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/fertilizer_news"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80" />


                <View
                    android:layout_width="0sp"
                    android:layout_height="5sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="35sp"
                    android:text="@string/centers"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/grey_40"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"/>

                <View
                    android:layout_width="0sp"
                    android:layout_height="5sp"/>


                <Button
                    android:id="@+id/centers"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/view_centers"
                    android:textAllCaps="false"
                    android:onClick="centers"/>

                <View
                    android:layout_width="0sp"
                    android:layout_height="5sp"/>


                <View
                    android:layout_width="0sp"
                    android:layout_height="5sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="35sp"
                    android:text="@string/options"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/grey_40"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"/>

                <View
                    android:layout_width="0sp"
                    android:layout_height="5sp"/>


                <Button
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/applyfert"
                    android:textAllCaps="false"
                    android:onClick="apply"/>

                <View
                    android:layout_width="0sp"
                    android:layout_height="5sp"/>

                <Button
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/applypick"
                    android:textAllCaps="false"
                    android:onClick="pickup"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>