<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".auth.changepass">



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/feed_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/background"
                android:contentDescription="@string/authDesc"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/overlay_dark_40"/>



            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/corn"
                    android:tint="@color/colorPrimary" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/oldPass1"
                    android:layout_width="300sp"
                    android:layout_marginTop="30sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"

                    app:endIconMode="password_toggle"
                    app:endIconContentDescription="@string/password"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/blue_grey_300"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newPass"
                    android:layout_width="300sp"
                    android:layout_marginTop="30sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    app:endIconMode="password_toggle"
                    app:endIconContentDescription="@string/password"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/blue_grey_300"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newPass2"
                    android:layout_width="300sp"
                    android:layout_marginTop="30sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_new_password"
                    app:endIconMode="password_toggle"
                    app:endIconContentDescription="@string/password"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/blue_grey_300"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp" />


                <Button
                    android:id="@+id/change"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/button_rounded_green_300"
                    android:text="@string/change_password"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_3" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="15dp" />






            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>